Fixed Mobile Overflow

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
 }
 
 .no-wrap p {
-    padding: 300px 25px
+    padding: 300px 0px
 }
 
 .flex-item-type1 {
